# quiche

./: .gitignore  .gitmodules  CMakeLists.txt  DEVELOPMENT.md  README.md  VERSION
base/files/: file_path.cc  file_path.h  file_path_constants.cc  file_util.cc  file_util.h  file_util_posix.cc  scoped_file.h
base/posix/: eintr_wrapper.h
base/sinks/: customize_file_helper-inl.h  customize_file_helper.h  sequence_file_sink-inl.h  sequence_file_sink.h
base/strings/: stringprintf.cc  stringprintf.h
googleurl/: CMakeLists.txt  WORKSPACE  copy.bara.sky
googleurl/base/: BUILD  compiler_specific.h  no_destructor.h  optional.h  stl_util.h  template_util.h
googleurl/base/containers/: checked_iterators.h  contains.h  contiguous_iterator.h  span.h  util.h
googleurl/base/functional/: identity.h  invoke.h  not_fn.h
googleurl/base/ranges/: algorithm.h  functional.h  ranges.h
googleurl/base/strings/: BUILD  abseil_string_conversions.cc  abseil_string_conversions.h  abseil_string_conversions_unittest.cc  char_traits.h  char_traits_unittest.cc  escape.cc  escape.h  escape_unittest.cc  latin1_string_conversions.cc  latin1_string_conversions.h  no_trigraphs_unittest.cc  nullable_string16.cc  nullable_string16.h  nullable_string16_unittest.cc  pattern.cc  pattern.h  pattern_unittest.cc  safe_sprintf.cc  safe_sprintf.h  safe_sprintf_unittest.cc  strcat.cc  strcat.h  strcat_internal.h  strcat_unittest.cc  strcat_win.cc  strcat_win.h  string16.cc  string16.h  string16_unittest.cc  string_number_conversions.cc  string_number_conversions.h  string_number_conversions_fuzzer.cc  string_number_conversions_internal.h  string_number_conversions_unittest.cc  string_number_conversions_win.cc  string_number_conversions_win.h  string_piece.cc  string_piece.h  string_piece_forward.h  (+35 more)
googleurl/build_config/: BUILD  build_config.bzl
googleurl/polyfills/: BUILD
googleurl/polyfills/base/: check.h  check_op.h  logging.h
googleurl/test/: BUILD  basic_test.cc
googleurl/url/: BUILD  gurl.cc  gurl.h  gurl_fuzzer.cc  gurl_unittest.cc  origin.cc  origin.h  origin_unittest.cc  run_all_perftests.cc  run_all_unittests.cc  scheme_host_port.cc  scheme_host_port.h  scheme_host_port_unittest.cc  url_canon.cc  url_canon.h  url_canon_etc.cc  url_canon_filesystemurl.cc  url_canon_fileurl.cc  url_canon_host.cc  url_canon_icu.cc  url_canon_icu.h  url_canon_icu_unittest.cc  url_canon_internal.cc  url_canon_internal.h  url_canon_internal_file.h  url_canon_ip.cc  url_canon_ip.h  url_canon_mailtourl.cc  url_canon_path.cc  url_canon_pathurl.cc  url_canon_query.cc  url_canon_relative.cc  url_canon_stdstring.h  url_canon_stdurl.cc  url_canon_unittest.cc  url_constants.h  url_file.h  url_idna_icu.cc  url_parse_file.cc  url_parse_internal.h  (+7 more)
gquiche/balsa/: balsa_enums.h  balsa_frame.cc  balsa_frame.h  balsa_frame_test.cc  balsa_headers.cc  balsa_headers.h  balsa_headers_test.cc  balsa_visitor_interface.h  framer_interface.h  header_api.h  header_properties.cc  header_properties.h  header_properties_test.cc  http_validation_policy.cc  http_validation_policy.h  noop_balsa_visitor.h  simple_buffer.cc  simple_buffer.h  simple_buffer_test.cc  standard_header_map.h
gquiche/binary_http/: binary_http_message.cc  binary_http_message.h  binary_http_message_test.cc
gquiche/common/: print_elements.h  print_elements_test.cc  quiche_buffer_allocator.cc  quiche_buffer_allocator.h  quiche_buffer_allocator_test.cc  quiche_circular_deque.h  quiche_circular_deque_test.cc  quiche_data_reader.cc  quiche_data_reader.h  quiche_data_reader_test.cc  quiche_data_writer.cc  quiche_data_writer.h  quiche_data_writer_test.cc  quiche_endian.h  quiche_endian_test.cc  quiche_ip_address.cc  quiche_ip_address.h  quiche_ip_address_family.cc  quiche_ip_address_test.cc  quiche_linked_hash_map.h  quiche_linked_hash_map_test.cc  quiche_mem_slice_storage.cc  quiche_mem_slice_storage.h  quiche_mem_slice_storage_test.cc  quiche_text_utils.cc  quiche_text_utils.h  quiche_text_utils_test.cc  simple_buffer_allocator.cc  simple_buffer_allocator.h  simple_buffer_allocator_test.cc  simple_linked_hash_map.h  simple_linked_hash_map_test.cc  structured_headers.cc  structured_headers.h  structured_headers_fuzzer.cc  structured_headers_generated_test.cc  structured_headers_test.cc
gquiche/epoll_server/: fake_simple_epoll_server.cc  fake_simple_epoll_server.h  simple_epoll_server.cc  simple_epoll_server.h  simple_epoll_server_test.cc
gquiche/http2/: http2_constants.cc  http2_constants.h  http2_constants_test.cc  http2_constants_test_util.cc  http2_constants_test_util.h  http2_structures.cc  http2_structures.h  http2_structures_test.cc  http2_structures_test_util.cc  http2_structures_test_util.h
net/base/: io_buffer.cc  io_buffer.h
net/http/: http_request_headers.cc  http_request_headers.h  http_util.cc  http_util.h
platform/: base64.cc  base64.h  byte_order.h  mem_slice_buffer.cc  mem_slice_buffer.h  platform.h  string_utils.cc  string_utils.h
platform/epoll_platform_impl/: epoll_bug_impl.h  epoll_export_impl.h  epoll_logging_impl.h  epoll_ptr_util_impl.h  epoll_time_impl.h  quic_epoll_clock.cc  quic_epoll_clock.h
platform/http2_platform_impl/: http2_arraysize_impl.h  http2_bug_tracker_impl.h  http2_containers_impl.h  http2_estimate_memory_usage_impl.h  http2_flag_utils_impl.h  http2_flags_impl.h  http2_logging_impl.h  http2_macros_impl.h  http2_string_utils_impl.h
platform/quic_platform_impl/: quic_bug_tracker_impl.h  quic_cert_utils_impl.cc  quic_cert_utils_impl.h  quic_client_stats_impl.h  quic_containers_impl.h  quic_default_proof_providers_impl.cc  quic_default_proof_providers_impl.h  quic_epoll_impl.h  quic_error_code_wrappers_impl.h  quic_expect_bug_impl.h  quic_file_utils_impl.cc  quic_file_utils_impl.h  quic_hostname_utils_impl.cc  quic_hostname_utils_impl.h  quic_iovec_impl.h  quic_map_util_impl.h  quic_mem_slice_impl.cc  quic_mem_slice_impl.h  quic_mem_slice_span_impl.cc  quic_mem_slice_span_impl.h  quic_mem_slice_storage_impl.cc  quic_mem_slice_storage_impl.h  (+10 more)
utils/: ca.cnf  generate-certs.sh  google_quiche_rewrite.sh  leaf.cnf
(+1554 files in other folders)
